[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/enemies/Ghost.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemies/Demon.tscn" type="PackedScene" id=2]
[ext_resource path="res://environments/level3/level3map.tscn" type="PackedScene" id=3]
[ext_resource path="res://environments/level tilemaps/leve3tilemap.tscn" type="PackedScene" id=4]
[ext_resource path="res://environments/level3/Level3HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemies/Mob.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://spells/SpellManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://environments/env_assets/portal.tscn" type="PackedScene" id=9]
[ext_resource path="res://environments/level3/level3.gd" type="Script" id=10]
[ext_resource path="res://environments/HUD/HUD.tscn" type="PackedScene" id=11]

[node name="level3" type="Node2D"]
script = ExtResource( 10 )

[node name="tilemap3" parent="." instance=ExtResource( 4 )]

[node name="level2map" parent="." instance=ExtResource( 3 )]

[node name="portal" parent="." instance=ExtResource( 9 )]
position = Vector2( 957, 285 )
scale = Vector2( 0.6, 0.6 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 146, 89 )
scale = Vector2( 0.75, 0.75 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Demon" parent="." instance=ExtResource( 2 )]
position = Vector2( 321, 118 )

[node name="Mob2" parent="." instance=ExtResource( 6 )]
position = Vector2( 819, 270 )

[node name="Mob3" parent="." instance=ExtResource( 6 )]
position = Vector2( 541, 331 )

[node name="Ghost" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 241 )

[node name="Ghost2" parent="." instance=ExtResource( 1 )]
position = Vector2( 232, 452 )

[node name="Demon2" parent="." instance=ExtResource( 2 )]
position = Vector2( 252, 235 )

[node name="SpellManager" parent="." instance=ExtResource( 8 )]
position = Vector2( 450, 76 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 146, 89 )
scale = Vector2( 0.75, 0.75 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 1028
limit_bottom = 602
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="Level3HUD" parent="CanvasLayer" instance=ExtResource( 5 )]

[connection signal="area_entered" from="portal" to="." method="_on_portal_area_entered"]
[connection signal="area_exited" from="portal" to="." method="_on_portal_area_exited"]
[connection signal="player_cast_spell" from="Player" to="SpellManager" method="_on_Player_player_cast_spell"]
[connection signal="player_hp_zero" from="Player" to="." method="_on_Player_player_hp_zero"]
[connection signal="mob_cast_spell" from="Mob2" to="SpellManager" method="_on_Mob_mob_cast_spell"]
[connection signal="mob_cast_spell" from="Mob3" to="SpellManager" method="_on_Mob_mob_cast_spell"]
[connection signal="mob_cast_spell" from="Ghost" to="SpellManager" method="_on_Mob_mob_cast_spell"]
[connection signal="mob_cast_spell" from="Ghost2" to="SpellManager" method="_on_Mob_mob_cast_spell"]
[connection signal="mob_cast_spell" from="Demon2" to="SpellManager" method="_on_Mob_mob_cast_spell"]
